* Permit only purchase line of type line as stock move origin

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Permit to remove ignored invoices and stock moves

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Add warning when receiving too much goods from purchase
* Require unit price only for confirmed purchase
* Do not invoice non purchase line
* Rename UOM to Unit for product supplier
* Use price from last purchase as product price
* Add a button to create invoices manually

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Fill taxes from default account for line without product
* Add partially shipped to shipment state
* Add pending, awaiting payment and partially paid to invoice state
* Remove support for Python 3.7
* Add support for Python 3.11
* Add related stock moves and invoice lines on purchase line
* Add relate to purchase lines from party and product
* Simplify relate to purchases
* Prevent creation of lines for non draft purchases
* Allow searching reporting records by name

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Add reporting

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Add supplier currency on party
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Split process method

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Add origin and set on returned purchase
* Add default lead time to supplier
* Allow product supplier to be deactivated
* Add summary to purchase line list
* Set payment term and invoice method from last party's purchases

Version 5.8.0 - 2020-11-02