@@ -1,3 +1,4 @@
+* Remove "Parties associated to Purchases" menu entry
 * Permit only purchase line of type line as stock move origin
 
 Version 7.2.0 - 2024-04-29
